--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46521,6 +46521,46 @@ a.text-muted:hover {
 }
 @charset "UTF-8";
 
+.blue {
+  color: #3490dc;
+}
+
+.indigo {
+  color: #6574cd;
+}
+
+.purple {
+  color: #9561e2;
+}
+
+.pink {
+  color: #f66d9b;
+}
+
+.red {
+  color: #e3342f;
+}
+
+.orange {
+  color: #f6993f;
+}
+
+.yellow {
+  color: #ffed4a;
+}
+
+.green {
+  color: #38c172;
+}
+
+.teal {
+  color: #4dc0b5;
+}
+
+.cyan {
+  color: #6cb2eb;
+}
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -63849,5 +63889,10 @@ h2 {
     position: absolute;
     right: 10px;
   }
+}
+
+.router-link-exact-active {
+  background-color: #2288ff !important;
+  color: white !important;
 }
 
