--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,7 +25,7 @@ $material-design-icons-font-file-path: 'material-design-icons-iconfont/dist/font
 
 //mdi
 
-@import '~@mdi/font/scss/materialdesignicons';
+@import '~@mdi/font/scss/materialdesignicons.scss';
 
 //custom css
 @import 'mystyle';
