still working on iconfonts

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,31 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~admin-lte/dist/css/adminlte.css';
+//font awesome
+$fontawesome-font-path: "~@fortawesome/fontawesome-free/webfonts";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/solid.scss";
+@import "~@fortawesome/fontawesome-free/scss/brands.scss";
+@import "~@fortawesome/fontawesome-free/scss/regular.scss";
+
+//material icon
+$material-icons-font-path: '~material-icons/iconfont/';
+
+@import '~material-icons/iconfont/material-icons.scss';
+
+//material design icon
+//$material-design-icons-font-file-path: 'material-design-icons-iconfont/dist/fonts';
+//@import '~material-design-icons-iconfont/dist/material-design-icons.css';
+
+//mdi
+
+@import '~@mdi/font/scss/materialdesignicons.scss';
+
+//custom css
+@import 'mystyle';
+
+.router-link-exact-active{
+    background-color: #2288ff !important;
+    color: white !important;
+}
