--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,4 +18,6 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
-$fa-font-path: "../webfonts";
+//$fa-font-path : "~@fortawesome/fontawesome-free/webfonts";
+
+
