--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,7 @@
 @import '~admin-lte/dist/css/adminlte.css';
 //font awesome
 
-
+$fa-font-path: "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
