datatable now working, left with srn

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28496,7 +28496,8 @@ a.text-muted:hover {
 .accent-gray-dark .page-item.disabled .page-link {
   background-color: #ffffff;
   border-color: #dee2e6;
-}@charset "UTF-8";
+}
+/*# sourceMappingURL=adminlte.css.map */@charset "UTF-8";
 
 .blue {
   color: #3490dc;
