--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-vue/src/index.scss';
 @import '~admin-lte/dist/css/adminlte.css';
+@import '~animate.css';
 //font awesome
 
 $fa-font-path: "../webfonts";
