--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71493,11 +71493,6 @@ section {
 }
 
 .loginBox {
-  /*position: absolute;*/
-  /*top: 700px;*/
-  /*left: 50%;*/
-  /*transform: translate(-50%,-50%);*/
-  /*width: 700px;*/
   padding: 80px 40px;
   box-sizing: border-box;
   background: rgba(0, 0, 0, 0.5);
@@ -71715,6 +71710,10 @@ h2 {
     position: absolute;
     right: 10px;
   }
+}
+
+.tip-box {
+  background-color: rgba(1, 4, 5, 0.5);
 }
 
 .router-link-exact-active {
