--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28497,7 +28497,11 @@ a.text-muted:hover {
   background-color: #ffffff;
   border-color: #dee2e6;
 }
-/*# sourceMappingURL=adminlte.css.map */.blue {
+/*# sourceMappingURL=adminlte.css.map */.bodyColor {
+  background-color: #f5f5f5;
+}
+
+.blue {
   color: #3490dc;
 }
 
