--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,8 +17,12 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$bodyColor: #f5f5f5;
 
 //$fa-font-path : "~@fortawesome/fontawesome-free/webfonts";
+.bodyColor{
+    background-color: $bodyColor;
+}
 .blue{
     color:$blue;
 }
