working on broadcast

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71695,13 +71695,17 @@ h2 {
   color: white !important;
 }
 
-.btn-blueCrest {
+.btn-health {
   color: white !important;
-  background-color: #09378c !important;
+  background-color: #9561e2 !important;
 }
 
-.text-blueCrest {
-  color: #09378c;
+.text-health {
+  color: #9561e2;
+}
+
+.bg-health {
+  background-color: #9561e2 !important;
 }
 
 .menu-icon-custom {
@@ -71721,7 +71725,7 @@ h2 {
 }
 
 .router-link-exact-active {
-  background-color: #2288ff !important;
+  background-color: #9561e2 !important;
   color: white !important;
 }
 
