--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,7 +37,7 @@ $material-icons-font-path: '~material-icons/iconfont/';
 @import 'mystyle';
 
 .router-link-exact-active{
-    background-color: #2288ff !important;
+    background-color: #9561e2 !important;
     color: white !important;
 }
 
