--- a/resources/sass/mystyle.scss
+++ b/resources/sass/mystyle.scss
@@ -235,13 +235,16 @@ h2
     color: white !important;
 }
 
-.btn-blueCrest{
+.btn-health{
     color: white !important;
-    background-color: #09378c !important;
+    background-color: #9561e2 !important;
 }
 
-.text-blueCrest{
-    color: #09378c;
+.text-health{
+    color: #9561e2;
+}
+.bg-health{
+    background-color: #9561e2 !important;
 }
 
 .menu-icon-custom{
