--- a/resources/sass/mystyle.scss
+++ b/resources/sass/mystyle.scss
@@ -267,3 +267,5 @@ h2
     background-color: rgba(1, 4, 5, 0.5);
 }
 .card-success.card-outline{border-top:3px solid #9561e2 !important}
+
+.make-link{ cursor: pointer }
