--- a/resources/sass/mystyle.scss
+++ b/resources/sass/mystyle.scss
@@ -269,3 +269,7 @@ h2
 .card-success.card-outline{border-top:3px solid #9561e2 !important}
 
 .make-link{ cursor: pointer }
+
+.by-bg-transparent{
+    background: rgba(255,255,255,.5) !important;
+}
