--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40191,29 +40191,17 @@ a.text-dark:focus {
   outline: 0;
 }
 
-.b-avatar.btn,
-.b-avatar[href] {
+.b-avatara,
+.b-avatarbutton,
+.b-avatar.btn {
   padding: 0;
   border: 0;
 }
 
-.b-avatar.btn .b-avatar-img img,
-.b-avatar[href] .b-avatar-img img {
-  -webkit-transition: -webkit-transform 0.15s ease-in-out;
-  transition: -webkit-transform 0.15s ease-in-out;
-  transition: transform 0.15s ease-in-out;
-  transition: transform 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
-}
-
-.b-avatar.btn:not(:disabled):not(.disabled),
-.b-avatar[href]:not(:disabled):not(.disabled) {
+.b-avatara:not(:disabled):not(.disabled),
+.b-avatarbutton:not(:disabled):not(.disabled),
+.b-avatar.btn:not(:disabled):not(.disabled) {
   cursor: pointer;
-}
-
-.b-avatar.btn:not(:disabled):not(.disabled):hover .b-avatar-img img,
-.b-avatar[href]:not(:disabled):not(.disabled):hover .b-avatar-img img {
-  -webkit-transform: scale(1.15);
-          transform: scale(1.15);
 }
 
 .b-avatar.disabled,
@@ -40224,8 +40212,7 @@ a.text-dark:focus {
 }
 
 .b-avatar .b-avatar-custom,
-.b-avatar .b-avatar-text,
-.b-avatar .b-avatar-img {
+.b-avatar .b-avatar-text {
   border-radius: inherit;
   width: 100%;
   height: 100%;
@@ -40243,19 +40230,16 @@ a.text-dark:focus {
   white-space: nowrap;
 }
 
-.b-avatar[href] {
-  text-decoration: none;
-}
-
 .b-avatar > .b-icon {
   width: 60%;
   height: auto;
   max-width: 100%;
 }
 
-.b-avatar .b-avatar-img img {
-  width: 100%;
-  height: 100%;
+.b-avatar img {
+  width: 90%;
+  height: 90%;
+  max-width: 100%;
   max-height: auto;
   border-radius: inherit;
 }
@@ -40270,21 +40254,6 @@ a.text-dark:focus {
   font-size: 70%;
   font-weight: 700;
   z-index: 5;
-}
-
-.b-avatar-group .b-avatar-group-inner {
-  display: -webkit-box;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.b-avatar-group .b-avatar {
-  border: 1px solid #dee2e6;
-}
-
-.b-avatar-group a.b-avatar:hover:not(.disabled):not(disabled),
-.b-avatar-group .btn.b-avatar:hover:not(.disabled):not(disabled) {
-  z-index: 3;
 }
 
 .b-calendar {
@@ -41632,7 +41601,8 @@ input[type="color"].form-control:disabled {
   z-index: -1;
   width: 100vw;
   height: 100vh;
-  opacity: 0.6;
+  background-color: #000;
+  opacity: 0.5;
 }
 
 .b-sidebar {
