--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40075,98 +40075,6 @@ a.text-dark:focus {
   box-shadow: 0 0 0 0.2rem rgba(227, 52, 47, 0.25);
 }
 
-.b-form-btn-label-control.form-control {
-  background-image: none;
-  padding: 0;
-}
-
-.input-group .b-form-btn-label-control.form-control {
-  padding: 0;
-}
-
-[dir="rtl"] .b-form-btn-label-control.form-control,
-.b-form-btn-label-control.form-control[dir="rtl"] {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-          flex-direction: row-reverse;
-}
-
-[dir="rtl"] .b-form-btn-label-control.form-control > label,
-.b-form-btn-label-control.form-control[dir="rtl"] > label {
-  text-align: right;
-}
-
-.b-form-btn-label-control.form-control > .btn {
-  line-height: 1;
-  font-size: inherit;
-  box-shadow: none !important;
-  border: 0;
-}
-
-.b-form-btn-label-control.form-control > .btn:disabled {
-  pointer-events: none;
-}
-
-.b-form-btn-label-control.form-control.is-valid > .btn {
-  color: #38c172;
-}
-
-.b-form-btn-label-control.form-control.is-invalid > .btn {
-  color: #e3342f;
-}
-
-.b-form-btn-label-control.form-control > .dropdown-menu {
-  padding: 0.5rem;
-}
-
-.b-form-btn-label-control.form-control > label {
-  outline: 0;
-  padding-left: 0.25rem;
-  margin: 0;
-  border: 0;
-  font-size: inherit;
-  cursor: pointer;
-  min-height: calc(calc(1.6em + 0.75rem + 2px) - 2px);
-}
-
-.b-form-btn-label-control.form-control > label.form-control-sm {
-  min-height: calc(calc(1.5em + 0.5rem + 2px) - 2px);
-}
-
-.b-form-btn-label-control.form-control > label.form-control-lg {
-  min-height: calc(calc(1.5em + 1rem + 2px) - 2px);
-}
-
-.input-group.input-group-sm .b-form-btn-label-control.form-control > label {
-  min-height: calc(calc(1.5em + 0.5rem + 2px) - 2px);
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.input-group.input-group-lg .b-form-btn-label-control.form-control > label {
-  min-height: calc(calc(1.5em + 1rem + 2px) - 2px);
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.b-form-btn-label-control.form-control[aria-disabled="true"],
-.b-form-btn-label-control.form-control[aria-readonly="true"] {
-  background-color: #e9ecef;
-  opacity: 1;
-}
-
-.b-form-btn-label-control.form-control[aria-disabled="true"] {
-  pointer-events: none;
-}
-
-.b-form-btn-label-control.form-control[aria-disabled="true"] > label {
-  cursor: default;
-}
-
-.b-form-btn-label-control.btn-group > .dropdown-menu {
-  padding: 0.5rem;
-}
-
 .b-avatar {
   display: -webkit-inline-box;
   display: inline-flex;
@@ -40175,6 +40083,9 @@ a.text-dark:focus {
   -webkit-box-pack: center;
           justify-content: center;
   vertical-align: middle;
+  flex-shrink: 0;
+  width: 2.5rem;
+  height: 2.5rem;
   font-size: inherit;
   font-weight: 400;
   line-height: 1;
@@ -40183,25 +40094,37 @@ a.text-dark:focus {
   text-align: center;
   overflow: visible;
   position: relative;
-  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .b-avatar:focus {
   outline: 0;
 }
 
-.b-avatara,
-.b-avatarbutton,
-.b-avatar.btn {
+.b-avatar.btn,
+.b-avatar[href] {
   padding: 0;
   border: 0;
 }
 
-.b-avatara:not(:disabled):not(.disabled),
-.b-avatarbutton:not(:disabled):not(.disabled),
-.b-avatar.btn:not(:disabled):not(.disabled) {
+.b-avatar.btn .b-avatar-img img,
+.b-avatar[href] .b-avatar-img img {
+  -webkit-transition: -webkit-transform 0.15s ease-in-out;
+  transition: -webkit-transform 0.15s ease-in-out;
+  transition: transform 0.15s ease-in-out;
+  transition: transform 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+}
+
+.b-avatar.btn:not(:disabled):not(.disabled),
+.b-avatar[href]:not(:disabled):not(.disabled) {
   cursor: pointer;
+}
+
+.b-avatar.btn:not(:disabled):not(.disabled):hover .b-avatar-img img,
+.b-avatar[href]:not(:disabled):not(.disabled):hover .b-avatar-img img {
+  -webkit-transform: scale(1.15);
+          transform: scale(1.15);
 }
 
 .b-avatar.disabled,
@@ -40212,7 +40135,8 @@ a.text-dark:focus {
 }
 
 .b-avatar .b-avatar-custom,
-.b-avatar .b-avatar-text {
+.b-avatar .b-avatar-text,
+.b-avatar .b-avatar-img {
   border-radius: inherit;
   width: 100%;
   height: 100%;
@@ -40223,11 +40147,17 @@ a.text-dark:focus {
           justify-content: center;
   -webkit-box-align: center;
           align-items: center;
+  -webkit-mask-image: radial-gradient(white, black);
+          mask-image: radial-gradient(white, black);
 }
 
 .b-avatar .b-avatar-text {
   text-transform: uppercase;
   white-space: nowrap;
+}
+
+.b-avatar[href] {
+  text-decoration: none;
 }
 
 .b-avatar > .b-icon {
@@ -40236,12 +40166,13 @@ a.text-dark:focus {
   max-width: 100%;
 }
 
-.b-avatar img {
-  width: 90%;
-  height: 90%;
-  max-width: 100%;
+.b-avatar .b-avatar-img img {
+  width: 100%;
+  height: 100%;
   max-height: auto;
   border-radius: inherit;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .b-avatar .b-avatar-badge {
@@ -40253,7 +40184,48 @@ a.text-dark:focus {
   border-radius: 10em;
   font-size: 70%;
   font-weight: 700;
-  z-index: 5;
+  z-index: 1;
+}
+
+.b-avatar-sm {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.b-avatar-sm .b-avatar-text {
+  font-size: calc(0.6rem);
+}
+
+.b-avatar-sm .b-avatar-badge {
+  font-size: calc(0.42rem);
+}
+
+.b-avatar-lg {
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.b-avatar-lg .b-avatar-text {
+  font-size: calc(1.4rem);
+}
+
+.b-avatar-lg .b-avatar-badge {
+  font-size: calc(0.98rem);
+}
+
+.b-avatar-group .b-avatar-group-inner {
+  display: -webkit-box;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.b-avatar-group .b-avatar {
+  border: 1px solid #dee2e6;
+}
+
+.b-avatar-group a.b-avatar:hover:not(.disabled):not(disabled),
+.b-avatar-group .btn.b-avatar:hover:not(.disabled):not(disabled) {
+  z-index: 1;
 }
 
 .b-calendar {
@@ -40503,6 +40475,112 @@ a.text-dark:focus {
 .input-group > .input-group-prepend:first-child > .btn-group:not(:first-child) > .btn {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+}
+
+.b-form-btn-label-control.form-control {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: stretch;
+          align-items: stretch;
+  height: auto;
+  padding: 0;
+  background-image: none;
+}
+
+.input-group .b-form-btn-label-control.form-control {
+  padding: 0;
+}
+
+[dir="rtl"] .b-form-btn-label-control.form-control,
+.b-form-btn-label-control.form-control[dir="rtl"] {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+          flex-direction: row-reverse;
+}
+
+[dir="rtl"] .b-form-btn-label-control.form-control > label,
+.b-form-btn-label-control.form-control[dir="rtl"] > label {
+  text-align: right;
+}
+
+.b-form-btn-label-control.form-control > .btn {
+  line-height: 1;
+  font-size: inherit;
+  box-shadow: none !important;
+  border: 0;
+}
+
+.b-form-btn-label-control.form-control > .btn:disabled {
+  pointer-events: none;
+}
+
+.b-form-btn-label-control.form-control.is-valid > .btn {
+  color: #38c172;
+}
+
+.b-form-btn-label-control.form-control.is-invalid > .btn {
+  color: #e3342f;
+}
+
+.b-form-btn-label-control.form-control > .dropdown-menu {
+  padding: 0.5rem;
+}
+
+.b-form-btn-label-control.form-control > .form-control {
+  height: auto;
+  min-height: calc(calc(1.6em + 0.75rem + 2px) - 2px);
+  padding-left: 0.25rem;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  word-break: break-word;
+  font-size: inherit;
+  white-space: normal;
+  cursor: pointer;
+}
+
+.b-form-btn-label-control.form-control > .form-control.form-control-sm {
+  min-height: calc(calc(1.5em + 0.5rem + 2px) - 2px);
+}
+
+.b-form-btn-label-control.form-control > .form-control.form-control-lg {
+  min-height: calc(calc(1.5em + 1rem + 2px) - 2px);
+}
+
+.input-group.input-group-sm .b-form-btn-label-control.form-control > .form-control {
+  min-height: calc(calc(1.5em + 0.5rem + 2px) - 2px);
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.input-group.input-group-lg .b-form-btn-label-control.form-control > .form-control {
+  min-height: calc(calc(1.5em + 1rem + 2px) - 2px);
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.b-form-btn-label-control.form-control[aria-disabled="true"],
+.b-form-btn-label-control.form-control[aria-readonly="true"] {
+  background-color: #e9ecef;
+  opacity: 1;
+}
+
+.b-form-btn-label-control.form-control[aria-disabled="true"] {
+  pointer-events: none;
+}
+
+.b-form-btn-label-control.form-control[aria-disabled="true"] > label {
+  cursor: default;
+}
+
+.b-form-btn-label-control.btn-group > .dropdown-menu {
+  padding: 0.5rem;
+}
+
+.custom-file-label {
+  white-space: nowrap;
+  overflow-x: hidden;
 }
 
 .b-custom-control-lg.custom-file,
@@ -41029,6 +41107,15 @@ input[type="color"].form-control:disabled {
   pointer-events: none;
 }
 
+.b-form-tags .b-form-tags-list {
+  margin-top: -0.25rem;
+}
+
+.b-form-tags .b-form-tags-list .b-from-tags-field,
+.b-form-tags .b-form-tags-list .b-form-tag {
+  margin-top: 0.25rem;
+}
+
 .b-form-tags.focus {
   color: #495057;
   background-color: #fff;
@@ -41055,6 +41142,7 @@ input[type="color"].form-control:disabled {
   font-size: 75%;
   font-weight: normal;
   line-height: 1.6;
+  margin-right: 0.25rem;
 }
 
 .b-form-tag.disabled {
@@ -41066,6 +41154,7 @@ input[type="color"].form-control:disabled {
   font-size: 125%;
   line-height: 1;
   float: none;
+  margin-left: 0.25rem;
 }
 
 .form-control-sm .b-form-tag {
@@ -41074,6 +41163,17 @@ input[type="color"].form-control:disabled {
 
 .form-control-lg .b-form-tag {
   line-height: 1.5;
+}
+
+.media-aside {
+  display: -webkit-box;
+  display: flex;
+  margin-right: 1rem;
+}
+
+.media-aside-right {
+  margin-right: 0;
+  margin-left: 1rem;
 }
 
 .modal-backdrop {
@@ -41585,7 +41685,7 @@ input[type="color"].form-control:disabled {
 }
 
 .b-sidebar-outer {
-  position: fixed !important;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -41595,14 +41695,13 @@ input[type="color"].form-control:disabled {
 }
 
 .b-sidebar-backdrop {
-  position: fixed !important;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: -1;
   width: 100vw;
   height: 100vh;
-  background-color: #000;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .b-sidebar {
@@ -41611,13 +41710,13 @@ input[type="color"].form-control:disabled {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
           flex-direction: column;
-  position: fixed !important;
+  position: fixed;
   top: 0;
-  height: 100vh;
   width: 320px;
-  max-width: 100% !important;
-  height: 100vh !important;
-  margin: 0 !important;
+  max-width: 100%;
+  height: 100vh;
+  max-height: 100%;
+  margin: 0;
   outline: 0;
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -41700,6 +41799,174 @@ input[type="color"].form-control:disabled {
 .b-sidebar > .b-sidebar-footer {
   -webkit-box-flex: 0;
           flex-grow: 0;
+}
+
+.b-skeleton-wrapper {
+  cursor: wait;
+}
+
+.b-skeleton {
+  position: relative;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.12);
+  cursor: wait;
+  -webkit-mask-image: radial-gradient(white, black);
+          mask-image: radial-gradient(white, black);
+}
+
+.b-skeleton::before {
+  content: "\A0";
+}
+
+.b-skeleton-text {
+  height: 0.9rem;
+  margin-bottom: 0.25rem;
+  border-radius: 0.25rem;
+}
+
+.b-skeleton-button {
+  width: 75px;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.9rem;
+  line-height: 1.6;
+  border-radius: 0.25rem;
+}
+
+.b-skeleton-avatar {
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
+}
+
+.b-skeleton-input {
+  height: calc(1.6em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  line-height: 1.6;
+  border: #ced4da solid 1px;
+  border-radius: 0.25rem;
+}
+
+.b-skeleton-icon-wrapper svg {
+  color: rgba(0, 0, 0, 0.12);
+}
+
+.b-skeleton-img {
+  height: 100%;
+  width: 100%;
+}
+
+.b-skeleton-animate-wave::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(rgba(255, 255, 255, 0.4)), to(transparent));
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+  -webkit-animation: b-skeleton-animate-wave 1.75s linear infinite;
+          animation: b-skeleton-animate-wave 1.75s linear infinite;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-skeleton-animate-wave::after {
+    background: none;
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+@-webkit-keyframes b-skeleton-animate-wave {
+  from {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+
+  to {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+}
+
+@keyframes b-skeleton-animate-wave {
+  from {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+
+  to {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+}
+
+.b-skeleton-animate-fade {
+  -webkit-animation: b-skeleton-animate-fade 0.875s ease-in-out alternate infinite;
+          animation: b-skeleton-animate-fade 0.875s ease-in-out alternate infinite;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-skeleton-animate-fade {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+@-webkit-keyframes b-skeleton-animate-fade {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.4;
+  }
+}
+
+@keyframes b-skeleton-animate-fade {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.4;
+  }
+}
+
+.b-skeleton-animate-throb {
+  -webkit-animation: b-skeleton-animate-throb 0.875s ease-in alternate infinite;
+          animation: b-skeleton-animate-throb 0.875s ease-in alternate infinite;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-skeleton-animate-throb {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+@-webkit-keyframes b-skeleton-animate-throb {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+
+  100% {
+    -webkit-transform: scale(0.975);
+            transform: scale(0.975);
+  }
+}
+
+@keyframes b-skeleton-animate-throb {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+
+  100% {
+    -webkit-transform: scale(0.975);
+            transform: scale(0.975);
+  }
 }
 
 .table.b-table.b-table-fixed {
